hphp/hack/test/typecheck/const_attribute/single_const_late_init.php
<?hh

class A {
  <<__Const, __LateInit>> public int $a;
}
